--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div class="guestScoreBox">
                         <p class="score" id="guestScore">0</p>
                     </div class="buttons">
